<resources>
    <string name="app_name">AutoSizeDemo2</string>
    <string name="dpi_test">default dpi</string>
    <string name="start_media">开启声乐之旅</string>
    <string name="tab_online_music">在线音乐</string>
    <string name="tab_qq_music">QQ音乐</string>
    <string name="tab_ximalaya">网络电台</string>
    <string name="tab_read">有声读物</string>
    <string name="tab_news">新闻资讯</string>
    <string name="tab_usb_music">USB音乐</string>
    <string name="tab_bt_music">蓝牙音乐</string>
    <string name="tab_radio">电台</string>
    <string name="media">多媒体</string>
    <string name="provider_title">未知</string>
    <string name="lrc_label">暂无歌词</string>
    <string name="usb_loading">USB设备识别中…</string>
    <string name="usb_no_music">无歌曲可放，请添加歌曲</string>
    <string name="usb_no_content">暂无USB音乐</string>
    <string name="dialog_usb_connect_one">检测到USB音乐</string>
    <string name="dialog_usb_connect_two">是否立即播放</string>
    <string name="usb_list_item">%1$d项</string>
    <string name="bt_status_connected">与%1$s 连接成功</string>
    <string name="bt_status_connecting">与%1$s 连接中</string>
    <string name="bt_status_connect_failed">与%1$s 连接失败</string>
    <string name="bt_status_disconnected">与%1$s 连接断开</string>
    <string name="bt_status_connect_timeout">与%1$s 连接超时</string>
    <string name="bt_disconnected">蓝牙设备未连接</string>
    <string name="connect_bt">连接蓝牙</string>
    <string name="bt_name_hint">蓝牙：</string>
    <string name="bt_connect_hint">苹果手机连接时，请将手机蓝牙打开并停留在蓝牙设置界面</string>
    <string name="bt_no_device">暂未搜索到蓝牙设备</string>
    <string name="bt_no_content">无音源数据</string>
    <string name="no_content_bt">暂无歌曲</string>
    <string name="bt_disconnect_hint">蓝牙设备断开，请重新连接</string>
    <string name="no_usb_device">USB设备未连接</string>
    <string name="usb">USB</string>
    <string name="bt">蓝牙</string>
    <string name="fm">FM</string>
    <string name="am">AM</string>
    <string name="radio">FM/AM</string>
    <string name="scanning_radio">电台搜索中，请稍后···</string>
    <string name="scanning_radio_short">正在搜台</string>
    <string name="scan_empty">未搜到可用电台</string>
    <string name="stop_scan_radio">停止搜台</string>
    <string name="restart_scan_radio">重新搜台</string>
    <string name="playmode_standard">标准</string>
    <string name="playmode_default">默认</string>
    <string name="playmode_classic">古典</string>
    <string name="playmode_pop">流行</string>
    <string name="playmode_jazz">爵士</string>
    <string name="playmode_percussion">打击</string>
    <string name="playmode_rock">摇滚</string>
    <string name="cyclemode_random">随机播放</string>
    <string name="cyclemode_one">单曲循环</string>
    <string name="cyclemode_cycle">循环播放</string>
    <string name="collect_radio_success">已收藏当前电台</string>
    <string name="uncollect_radio_success">已移除收藏当前电台</string>
    <string name="usb_connect_success">USB已连接成功</string>
    <string name="usb_device_detach">USB设备已断开,请重新连接</string>
    <string name="all_music">全部歌曲</string>
    <string name="all_music_title">全部音乐</string>
    <string name="usb_file_music">U盘文件</string>
    <string name="search_list">搜索列表</string>
    <string name="collect_list">收藏列表</string>
    <string name="no_search_list">暂无电台列表</string>
    <string name="no_collect_list">暂无收藏电台</string>
    <string name="dialog_play">播放</string>
    <string name="dialog_cancel">取消</string>
    <string name="guide_view_one">左右滑动</string>
    <string name="guide_view_two">切换歌曲</string>
    <string name="guide_view_three">点击</string>
    <string name="guide_view_four">暂停/播放</string>
    <string name="baidu_tab">小度随心 %1$s</string>
    <string name="play_list">播放列表</string>
    <string name="baidu_music">小度随心</string>
    <string name="str_vehicle_health">车辆健康</string>
    <string name="str_drive_data">行驶数据</string>
    <string name="str_drive_behaviour">驾驶行为</string>
    <string name="str_scene_mode">情景模式</string>
    <string name="str_energy_flow">能量流动</string>
    <string name="str_nearly_seven_days_drive_behaviour">近7天驾驶信息</string>
    <string name="str_nothing_get">- -</string>
    <string name="str_percentage">%</string>
    <string name="str_avg_fuel_consumption">平均油耗</string>
    <string name="str_unit_avg_fuel_consumption">L/100km</string>
    <string name="str_more_tips">更多提示</string>
    <string name="str_range_remaining">续航里程</string>
    <string name="str_range_remaining_hev">燃油续航里程</string>
    <string name="str_odometer">总里程</string>
    <string name="str_unit_speed">km/h</string>
    <string name="str_unit_kilometer">km</string>
    <string name="str_subtotal_1">小计A里程</string>
    <string name="str_subtotal_2">小计B里程</string>
    <string name="str_avg_speed">平均车速</string>
    <string name="str_energy_flow_recycle_intensity">制动能量回收强度</string>
    <string name="str_strong">强</string>
    <string name="str_middle">中</string>
    <string name="str_weak">弱</string>
    <string name="str_energy_recycle_tip">能量回收越强，车辆滑行时减速越快</string>
    <string name="str_your_car_need_maintenance">您的爱车需要保养了!</string>
    <string name="str_your_car_is_healthy">您的爱车非常健康!</string>
    <string name="str_your_car_has_fault">您的爱车出现异常！</string>
    <string name="str_next_maintenance_distance">距下次保养还有</string>
    <string name="str_over_maintenance_distance">已超保养里程</string>
    <string name="str_abnormal">异常</string>
    <string name="str_i_know_it">我知道了</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm">确定</string>
    <string name="str_drive_behaviour_dialog_tip">1.预先判断人车流量和交通信号以保持平稳驾驶；\n2.与前车保持足够的安全距离；\n3.轻踩加速与制动踏板以保持平稳驾驶；\n4.尽量避免急加速和急刹车等驾驶行为；\n5.请适度使用空调，在不需要时关闭后视镜及挡风玻璃加热；\n6.高速行驶时关闭车窗能带来更好节油效果。</string>
    <string name="cool_mode">快速降温</string>
    <string name="warm_mode">一键温暖</string>
    <string name="pm_mode">净化雾霾</string>
    <string name="baby_mode">呵护宝宝</string>
    <string name="park_mode">停车模式</string>
    <string name="smoke_mode">抽烟模式</string>
    <string name="snow_mode">雨雪模式</string>
    <string name="romantic_mode">浪漫模式</string>
    <string name="car_wash_mode">洗车模式</string>
    <string name="custom_mode">自定义模式</string>
    <string name="mode_switching">模式切换中,请稍后...</string>
    <string name="str_save">保存</string>
    <string name="custom_hint">请输入自定义模式名称</string>
    <string name="custom_scene_air_conditioner">打开空调A/C</string>
    <string name="str_open_back_defrost">打开后除霜</string>
    <string name="str_open_front_defrost">打开前除霜</string>
    <string name="air_conditioner_temperature">空调温度设定</string>
    <string name="air_conditioner_gear">空调风量设定</string>
    <string name="air_conditioner_blow_mode">空调吹风模式</string>
    <string name="air_conditioner_blow_face">吹脸</string>
    <string name="air_conditioner_blow_foot">吹脚</string>
    <string name="air_conditioner_blow_window">吹窗</string>
    <string name="str_loop_mode">循环模式</string>
    <string name="str_inner_loop">内循环</string>
    <string name="str_out_loop">外循环</string>
    <string name="custom_scene_seat">主驾座椅通风</string>
    <string name="custom_scene_seat_1">1挡</string>
    <string name="custom_scene_seat_2">2挡</string>
    <string name="custom_scene_seat_3">3挡</string>
    <string name="custom_scene_window">打开天窗</string>
    <string name="str_window_full_open">打开</string>
    <string name="str_window_cock">翘起</string>
    <string name="custom_scene_atmosphere_lamp">打开氛围灯</string>
    <string name="custom_scene_music_type">音乐类型</string>
    <string name="music_type_pop">流行</string>
    <string name="music_type_popular">欧美</string>
    <string name="music_type_light_music">轻音乐</string>
    <string name="music_type_folk">民谣</string>
    <string name="music_type_rock">摇滚</string>
    <string name="music_type_jazz">爵士</string>
    <string name="music_type_internet_celebrity">网红</string>
    <string name="custom_scene_navigation">打开导航</string>
    <string name="str_navigation_home">家</string>
    <string name="str_navigation_office">公司</string>
    <string name="str_navigation_school">学校</string>
    <string name="toast_acc_not_on">请将电源置于ON档</string>
    <string name="toast_speed_inconformity">速度＜10km/h才可以操作洗车模式</string>
    <string name="toast_light_click_off">不支持此操作，请使用小灯开关操作关闭氛围灯</string>
    <string name="toast_ambient_light_switch_off">请先开启氛围灯使能开关</string>
    <string name="toast_scene_cool_opened">空调降温已打开，温度已设置到最低</string>
    <string name="toast_scene_warm_opened">空调制暖已打开</string>
    <string name="toast_scene_warm_opened_driverseatheat_supported">空调制暖、座椅加热已打开</string>
    <string name="str_parking_dialog_tip">将为您关闭车窗、天窗、空调和雨\n刮，请勿靠近车窗、天窗！</string>
    <string name="str_tts_parking_open">10秒后为您关闭车窗、天窗、空调和雨刮，请勿靠近车窗、天窗</string>
    <string name="str_parking_dialog_tip_noVoiceControlsunroofFunction">将为您关闭车窗、空调和雨\n刮，请勿靠近车窗！</string>
    <string name="str_tts_parking_open_noVoiceControlsunroofFunction">10秒后为您关闭车窗、天窗、空调和雨刮，请勿靠近车窗、天窗</string>
    <string name="str_tts_parking_close">已为您取消停车模式</string>
    <string name="toast_scene_baby_opened">空调已调至宝宝舒适模式，多媒体声音已降低</string>
    <string name="toast_scene_smoking_opened">空气净化，车内通风已开启，天窗已翘起</string>
    <string name="toast_scene_smoking_opened_noVoiceControlSunroofFunction">空气净化，车内通风已开启</string>
    <string name="toast_scene_rain_snow_opend">近光灯、雾灯、示廓灯、前除霜已开启，雨雪天气注意安全~</string>
    <string name="toast_scene_romantic_opened">氛围灯、音乐已就位，开启浪漫之旅吧~</string>
    <string name="toast_scene_pm_opened">已为您开启空气净化</string>
    <string name="toast_scene_custom_opened">自定义模式已打开</string>
    <string name="toast_scene_custom_navigation_opened_home">已为您打开自定义模式，即将开启导航到家</string>
    <string name="toast_scene_custom_navigation_opened_company">已为您打开自定义模式，即将开启导航到公司</string>
    <string name="toast_scene_custom_music_opened">已为您开启自定义情景模式，即将开启音乐</string>
    <string name="toast_scene_custom_music_navigation_opened">已为您开启自定义情景模式，即将开启音乐和导航</string>
    <string name="toast_scene_set_fail">该指令相关的车辆设置条件不满足，请稍后再试</string>
    <string name="toast_scene_set_close_long">%1$s模式已关闭</string>
    <string name="toast_scene_set_close_short">%1$s已关闭</string>
    <string name="dialog_delete_custom">删除%1$s模式?</string>
    <string name="toast_customname_no_input">您还未编辑名称!!!</string>
    <string name="toast_no_input">还未输入内容</string>
    <string name="toast_set_scene_name_size">已超出字符上限</string>
    <string name="toast_same_edit_name">自定义模式名称已存在,请重新设置</string>
    <string name="str_6">6</string>
    <string name="toast_cancel_parking_mode">已为您取消停车模式</string>
    <string name="i_jia_qu_tip_one">此功能仅在Normal驾驶模式下可用</string>
    <string name="i_jia_qu_tip_two">学习您的驾驶风格，智能调节车辆动力输出</string>
    <string name="i_jia_qu_tip_three">极致高效，为您节省燃油</string>
    <string name="i_jia_qu_tip_four">手动调节车辆动力输出</string>
    <string name="i_jia_qu_mode_choose">模式选择</string>
    <string name="Intelligent_D_Mode">智能动力</string>
    <string name="Intelligent_Saving_Fuel_Mode">智能节油</string>
    <string name="Intelligent_Manual_Mode">自定义</string>
    <string name="str_breakdown">故障</string>
    <string name="str_airbag">安全气囊</string>
    <string name="str_brakingSystem">制动系统</string>
    <string name="str_driverAssistsystem">驾驶辅助系统</string>
    <string name="str_dynamicalSystem">动力系统</string>
    <string name="str_elecLowQuantity">电量低</string>
    <string name="str_battery">蓄电池</string>
    <string name="str_ESP">车身稳定系统</string>
    <string name="str_motorOilPressure">机油压力</string>
    <string name="str_steerSystem">转向系统</string>
    <string name="str_highWaterTemp">温度过高</string>
    <string name="str_coolingLiquid">冷却液</string>
    <string name="str_tirePressure">胎压</string>
    <string name="str_no_get_value">未获取数据</string>
    <string name="str_warning_tips">温馨提示</string>
    <string name="str_tsp_data_lost">数据走丢了，请稍后再试</string>
    <string name="str_account_guest">请登录车主账号，查看驾驶行为数据</string>
    <string name="str_this_vehicle_data">本车驾驶状况</string>
    <string name="str_average_vehicle_data">用户平均值</string>
    <string name="str_open_ijiaqu">打开总开关</string>
    <string name="str_close_ijiaqu">关闭总开关</string>
    <string name="str_open_intelligent">打开智能动力</string>
    <string name="str_open_fuel_saving">打开智能节油</string>
</resources>